--- a/package.json
+++ b/package.json
@@ -11,27 +11,34 @@
     "lint": "yarn lint:eslint && yarn lint:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "yarn lint:prettier --write",
-    "fix": "yarn fix:eslint && yarn fix:prettier"
+    "fix": "yarn fix:eslint && yarn fix:prettier",
+    "deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
-    "@reach/dialog": "0.16.2",
+    "@hookform/resolvers": "2.8.8",
+    "@reach/dialog": "0.17.0",
     "@tailwindcss/typography": "0.5.2",
     "firebase": "9.6.10",
-    "react": "^17.0.2",
+    "react": "17",
     "react-beautiful-dnd": "13.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "17",
+    "react-hook-form": "7.30.0",
     "react-markdown": "8.0.2",
+    "react-router-dom": "6.3.0",
     "remark-gfm": "3.0.1",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "zod": "3.14.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "5.18.0",
-    "@typescript-eslint/parser": "5.18.0",
+    "@types/react": "17",
+    "@types/react-beautiful-dnd": "13.1.2",
+    "@types/react-dom": "17",
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "5.20.0",
+    "@typescript-eslint/parser": "5.20.0",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "10.4.4",
-    "eslint": "8.12.0",
+    "eslint": "8.13.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
@@ -41,8 +48,10 @@
     "eslint-plugin-sort-destructure-keys": "1.4.0",
     "eslint-plugin-tailwindcss": "3.5.0",
     "postcss": "8.4.12",
+    "prettier": "2.6.2",
     "tailwindcss": "3.0.23",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "vite-tsconfig-paths": "3.4.1"
   }
 }
